@@ -1,3 +1,9 @@
+2000-11-22  Martin Baulig  <martin@home-of-linux.org>
+
+	* gnome-pkgconfig.m4: New file. This defines
+	GNOME_CHECK_PKGCONFIG, GNOME_REQUIRE_PKGCONFIG and
+	GNOME_PKGCONFIG_* macros from pkg-config.
+
 2000-11-21  Martin Baulig  <baulig@suse.de>
 
 	* gnome-support.m4, need-declaration.m4: Removed.
